# JinProject

./: CMakeLists.txt  README.md
mainLauncher/: CMakeLists.txt
resources/: rooms.xml  visageAvecSymbole.xml
src/: CMakeLists.txt  Circle.cpp  Circle.h  Door.cpp  Door.h  Drawing.cpp  Drawing.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Group.cpp  Group.h  Instance_Symbol.cpp  Instance_Symbol.h  LivingEntity.cpp  LivingEntity.h  Monster.cpp  Monster.h  MovingEntity.cpp  MovingEntity.h  MovingStrategy.cpp  MovingStrategy.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Room.cpp  Room.h  SFML_output.cpp  SFML_output.h  Shape.cpp  Shape.h  Symbol.cpp  Symbol.h  SymbolTable.h  Wall.cpp  Wall.h  myMain.cpp
srcOriginal/: CMakeLists.txt
unitTests/: CMakeLists.txt  unitTests.cpp
